[metadata]
name= kaska
version = 0.0.1
url = https://github.com/jgomezdans/kaska
#download_url
#project_urls
author = Jose Gomez-Dans
author_email = j.gomez-dans@ucl.ac.uk
#maintainer
#maintainer_email
classifiers =
	    Development Status :: 2 - Pre-Alpha
	    Intended Audience :: Developers
	    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	    Natural Language :: English
	    Programming Language :: Python :: 2
	    Programming Language :: Python :: 2.7
	    Programming Language :: Python :: 3
	    Programming Language :: Python :: 3.4
	    Programming Language :: Python :: 3.5
	    Programming Language :: Python :: 3.6
	    Programming Language :: Python :: 3.7
license = GNU General Public License v3
#licence_file
description = An efficient smoother
long_description = file: README.rst, HISTORY.rst
keywords = kaska
#platforms
#provides
#requires
#obsoletes

[options]
zip_safe = False
setup_requires = pytest-runner
install_requires =
		 numpy
		 scipy
		 matplotlib
		 numba
		 colorama >= 0.3.9
		 tensorflow

#extras_require
#python_requires
#entry_points
#use_2to3
#use_2to3_fixers
#use_2to3_exclude_fixers
#convert_2to3_doctests
#scripts
#eager_resources
#dependency_links
test_suite = tests
tests_require = pytest
include_package_data = True

[files]
packages =
		kaska
		kaska.TwoNN
		kaska.NNParameterInversion
#packages = find:
#package_dir
package_data = 
	kaska/inverters = *.h5
	kaska/inverters = *.npz
#exclude_package_data
#namespace_packages
#py_modules
#data_files

[options.packages.find]
include =
	kaska

[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:kaska/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

